--- a/.github/workflows/greet-action.yml
+++ b/.github/workflows/greet-action.yml
@@ -11,8 +11,8 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Run Greet Action
-        uses: ./
+        - name: Greet Action
+          uses: r3d-shadow/custom-github-action@1.0.1
         with:
           name: "Safeer"
           message: "Welcome to GitHub Actions!"
